Mobile Alignment Issues

--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,9 @@ h3 {
     h1 {
         font-size: 28px;
     }
+    h3 {
+        text-align: left;
+    }
 
     h4 {
         font-size: 10px;
